--- a/html/states.html
+++ b/html/states.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Non-Contiguous Cartogram</title>
+<title>Medicaid by State</title>
 <style>
 
 .land {
@@ -13,8 +13,104 @@
   stroke: #666;
 }
 
+text {
+  font: 12px sans-serif;
+}
+
+body {
+  overflow: hidden;
+  margin: 0;
+  font-size: 14px;
+  font-family: "Helvetica Neue", Helvetica;
+}
+
+#chart, #header, #footer {
+  position: absolute;
+  top: 0;
+}
+
+#header, #footer {
+  z-index: 1;
+  display: block;
+  font-size: 36px;
+  font-weight: 300;
+  text-shadow: 0 1px 0 #fff;
+}
+
+#header.inverted, #footer.inverted {
+  color: #fff;
+  text-shadow: 0 1px 4px #000;
+}
+
+#header {
+  top: 80px;
+  left: 140px;
+  width: 1000px;
+}
+
+#footer {
+  top: 680px;
+  right: 140px;
+  text-align: right;
+}
+
+rect {
+  fill: none;
+  pointer-events: all;
+}
+
+pre {
+  font-size: 18px;
+}
+
+line {
+  stroke: #000;
+  stroke-width: 1.5px;
+}
+
+.string, .regexp {
+  color: #f39;
+}
+
+.keyword {
+  color: #00c;
+}
+
+.comment {
+  color: #777;
+  font-style: oblique;
+}
+
+.number {
+  color: #369;
+}
+
+.class, .special {
+  color: #1181B8;
+}
+
+a:link, a:visited {
+  color: #000;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #666;
+}
+
+.hint {
+  position: absolute;
+  right: 0;
+  width: 1280px;
+  font-size: 12px;
+  color: #999;
+}
+
 </style>
 <body>
+<div id="body">
+	<div id="footer">Medicare Gender split per state (Q3 2012)</div>
+</div>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/topojson.v0.min.js"></script>
 <script>
@@ -30,50 +126,65 @@ var svg = d3.select("body").append("svg")
 
 d3.csv("state_Q3_2012_medicaid_gender.csv", function(values) {
 	//(values);
-	average = 0;
+	var average = 0;
 	ignore_line = [];
 	for (i = 0; i < values.length; i++) {
 		if (values[i].State == "Puerto Rico" || values[i].State == "U.S. Virgin Islands" || values[i].State == "District of Columbia") {
 			console.log("")
 			ignore_line.push(i);
 		} else {
-			average += values[i].StateTotal;
+			average += parseFloat(values[i].StateTotal);
 		}	
+		console.log(values[i].State + " = " + i)
 	}
-	average /= values.length;
-	
+	console.log("Total " + average)
+	console.log("Len " + values.length)
+	average = average / values.length;
+	console.log("Average = " + average)
+	count = 0
 	d3.json("us.json", function(error, us) {
 		count = 0;
 		index = 0;
-		svg.append("path")
-			.datum(topojson.object(us, us.objects.land))
+        svg.append("path")
+            .datum(topojson.object(us, us.objects.land))
 			.attr("class", "land")
 			.attr("d", path);
-		
-		var node = svg.selectAll(".state")
-			.data(topojson.object(us, us.objects.states).geometries)
-			.enter().append("path")
-			.attr("d", path)
+       	var node = svg.selectAll(".state")
+       		.data(topojson.object(us, us.objects.states).geometries)
+       	  .enter().append("path")
+       		.attr("d", path)
 			.attr("stroke", d3.rgb("#ccc"))
-			.attr("name", function(d) { return String(values[count].State); } )
-			.attr("fill", function(d) {
-				index = get_index_from_id(d.id);
+			.attr("name", function(d, c) { if (c < values.length) return String( values[c].State); } )
+			.attr("fill", function(d, c) {
+				index = c; //get_index_from_id(d.id);
 				if (index < values.length) {
-					blue = 2.55*(100-parseFloat(values[index].Male));
-					red = 2.55*(100-parseFloat(values[index].Female));
+					blue = 2.55*(parseFloat(values[index].Male));
+					red = 2.55*(parseFloat(values[index].Female));
 					offset = values[index].StateTotal / average;
-					/*
-					blue *= offset;
-					red *= offset;
-					*/
 					fill_color = d3.rgb(red, 0, blue);
-					fill_color.brighter(offset);
-					index++;
+					//fill_color = fill_color.brighter(Math.log(offset));
+					console.log("State: " + values[c].State + " Color: " + fill_color.toString())
 					return fill_color;
-				} else { return d3.rgb("white"); }
+				} else { return d3.rgb("blue"); }
 			});
 			
-		node.append("title").text( function (c, j) { console.log(j); return values[j].State;});
+		 node.append("title").text( function (c, j) { 
+			if (j < values.length) { 
+				return values[j].State + " " + values[j].Male + "M/" + values[j].Female + "F";
+			} else {
+				return ("Undefined for " + j);
+			}
+			});
+		node.append("text")
+			.attr("dy", "0.3em")
+			.style("text-anchor", "middle")
+			.text( function (c, j) { 
+			if (j < values.length) { 
+				return values[j].State;
+			} else {
+				return ("Undefined for " + j);
+			}
+			});
 	});
 });
 
