--- a/html/states.html
+++ b/html/states.html
@@ -109,7 +109,9 @@ a:hover {
 </style>
 <body>
 <div id="body">
-	<div id="footer">Medicare Gender split per state (Q3 2012)</div>
+	<div id="footer">Medicare Gender split per state (Q3 2012)
+		<div class="hint">mouse over a state for male vs female numbers</div>
+	</div>
 </div>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/topojson.v0.min.js"></script>
